tests/ui/implied-bounds/projection-impl-unsound.stderr
error: lifetime may not live long enough
  --> $DIR/projection-impl-unsound.rs:41:9
   |
LL | impl<'a, 'b> LifetimeExtend<'a, 'b> for <&'b &'a () as Forget>::Forgotten {
   |      --  -- lifetime `'b` defined here
   |      |
   |      lifetime `'a` defined here
...
LL |         short
   |         ^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to 1 previous error

